# src/server/server.ts
@@ -1,23 +1,27 @@
-import { AxiosError } from 'axios';
 import fastify from 'fastify';
 import { z } from 'zod';
+
+import { pickDefinedProperties } from '@/utils/data';
 
 import { environment } from '../config/environment';
 import HereClient from '../services/here/HereClient';
 import { LocationOperations } from '../types/generated';
 import { City } from '../types/locations';
 import { calculateDistanceByCoordinates } from '../utils/distances';
-import { handleServerError } from './errors';
+import { handleServerError, NotFoundError } from './errors';
 
 const DEFAULT_CACHE_CONTROL_MAX_AGE = 60 * 60 * 24; // 1 day
 const DEFAULT_CACHE_CONTROL_STALE_WHILE_REVALIDATE = 60; // 1 minute
 
-const DEFAULT_PUBLIC_CACHE_CONTROL_HEADER = [
-  'public',
-  `max-age=${DEFAULT_CACHE_CONTROL_MAX_AGE}`,
-  `s-maxage=${DEFAULT_CACHE_CONTROL_MAX_AGE}`,
-  `stale-while-revalidate=${DEFAULT_CACHE_CONTROL_STALE_WHILE_REVALIDATE}`,
-].join(', ');
+const DEFAULT_PUBLIC_CACHE_CONTROL_HEADER =
+  environment.NODE_ENV === 'production'
+    ? [
+        'public',
+        `max-age=${DEFAULT_CACHE_CONTROL_MAX_AGE}`,
+        `s-maxage=${DEFAULT_CACHE_CONTROL_MAX_AGE}`,
+        `stale-while-revalidate=${DEFAULT_CACHE_CONTROL_STALE_WHILE_REVALIDATE}`,
+      ].join(', ')
+    : undefined;
 
 const api = {
   here: new HereClient(),
@@ -39,21 +43,19 @@ server.get('/cities', async (request, reply) => {
 
   const hereCities = await api.here.searchCities(query);
 
-  const cities = hereCities.map<City>((city) => ({
-    id: city.id,
-    name: city.address.city,
-    state: {
-      name: city.address.state,
-      code: city.address.stateCode,
-    },
-    country: {
-      name: city.address.countryName,
-      code: city.address.countryCode,
-    },
-  }));
+  const cities = hereCities.map(
+    (city): City => ({
+      id: city.id,
+      name: city.address.city,
+      stateName: city.address.state,
+      stateCode: city.address.stateCode,
+      countryName: city.address.countryName,
+      countryCode: city.address.countryCode,
+    }),
+  );
 
   return reply
-    .header('cache-control', DEFAULT_PUBLIC_CACHE_CONTROL_HEADER)
+    .headers(pickDefinedProperties({ 'cache-control': DEFAULT_PUBLIC_CACHE_CONTROL_HEADER }))
     .status(200)
     .send(cities satisfies LocationOperations['cities/search']['response']['200']['body']);
 });
@@ -68,48 +70,19 @@ server.get('/cities/distances', async (request, reply) => {
     request.query,
   ) satisfies LocationOperations['cities/distances/get']['request']['searchParams'];
 
-  const [originCityLookupResult, destinationCityLookupResult] = await Promise.allSettled([
+  const [originCity, destinationCity] = await Promise.all([
     api.here.lookupById(originCityId),
     api.here.lookupById(destinationCityId),
   ]);
 
-  if (originCityLookupResult.status === 'rejected') {
-    if (originCityLookupResult.reason instanceof AxiosError && originCityLookupResult.reason.response?.status === 404) {
-      return reply.status(404).send({
-        message: 'Origin city not found',
-      } satisfies LocationOperations['cities/distances/get']['response']['404']['body']);
-    }
-    throw originCityLookupResult.reason;
-  }
-
-  if (destinationCityLookupResult.status === 'rejected') {
-    if (
-      destinationCityLookupResult.reason instanceof AxiosError &&
-      destinationCityLookupResult.reason.response?.status === 404
-    ) {
-      return reply.status(404).send({
-        message: 'Destination city not found',
-      } satisfies LocationOperations['cities/distances/get']['response']['404']['body']);
-    }
-    throw destinationCityLookupResult.reason;
-  }
-
-  const originCity = originCityLookupResult.value;
   const originPosition = originCity.position;
-
-  const destinationCity = destinationCityLookupResult.value;
   const destinationPosition = destinationCity.position;
 
   if (!originPosition) {
-    return reply.status(404).send({
-      message: 'Could not find the coordinates of the origin city',
-    } satisfies LocationOperations['cities/distances/get']['response']['404']['body']);
+    throw new NotFoundError('Could not find the coordinates of the origin city');
   }
-
   if (!destinationPosition) {
-    return reply.status(404).send({
-      message: 'Could not find the coordinates of the destination city',
-    } satisfies LocationOperations['cities/distances/get']['response']['404']['body']);
+    throw new NotFoundError('Could not find the coordinates of the destination city');
   }
 
   const distanceInKilometers = calculateDistanceByCoordinates(
@@ -118,7 +91,7 @@ server.get('/cities/distances', async (request, reply) => {
   );
 
   return reply
-    .header('cache-control', DEFAULT_PUBLIC_CACHE_CONTROL_HEADER)
+    .headers(pickDefinedProperties({ 'cache-control': DEFAULT_PUBLIC_CACHE_CONTROL_HEADER }))
     .status(200)
     .send({
       kilometers: distanceInKilometers,
